--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 							<ul>
 								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
-								<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
 							</ul>
                         </div>
 					</div>
@@ -168,11 +167,11 @@
 									<h3>Khoa Nguyen</h3>
 									<span>Software Engineer</span><br><br>
 									<div class="edina_tm_work_together_wrap">
-											<div class="invite wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
-												<a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
-												class="my_btn" target="_blank">Download Resume <i class="fas fa-download"></i></a>
-											</div>
+										<div class="invite">
+											<a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
+											class="my_btn" target="_blank">Download Resume <i class="fas fa-download"></i></a>
 										</div>
+									</div>
 								</div>
 							</div>
 							<div class="edina_tm_discover_wrap homepage_third anchor">
@@ -366,17 +365,18 @@
 						<li class="design">
 							<div class="list_inner">
 								<div class="image_wrap">
-									<img src="img/portfolio/600x600.jpg" alt="" />
+									<img src="img/portfolio/600x600.jpg" alt=""/>
 									<div class="main_image"></div>
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/1.jpg">Real-Time Machine Learning Custom Object Detection</a></span>
                                     <span class="second">Python, Tensorflow, Darkflow, YOLO, OpenCV</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://github.com/kdncode/tensorFlow-react" target="_blank" ><span>Code</span></a>
-                                        </div>
-                                    </div>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://github.com/kdncode/tensorFlow-react", 
+											class="my_btn" target="_blank">Code <i class="fas fa-code"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
                         </li>
@@ -389,12 +389,13 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/2.jpg">Amazon-Like Web App</a></span>
-                                    <span class="second">Python, JavaScript, SQLite</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://github.com/kdncode/amazon-clone" target="_blank" ><span>Code</span></a>
-                                        </div>
-                                    </div>
+									<span class="second">Python, JavaScript, SQLite</span>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://github.com/kdncode/amazon-clone", 
+											class="my_btn" target="_blank">Code <i class="fas fa-code"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
                         </li>
@@ -407,12 +408,13 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/3.jpg">Twitter-Like Web App</a></span>
-                                    <span class="second">Python, JavaScript, SQLite</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://github.com/kdncode/twitter-clone" target="_blank" ><span>Code</span></a>
-                                        </div>
-                                    </div>
+									<span class="second">Python, JavaScript, SQLite</span>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://github.com/kdncode/twitter-clone", 
+											class="my_btn" target="_blank">Code <i class="fas fa-code"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
                         </li>
@@ -425,12 +427,13 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/4.jpg">AirBnB-Like Web App</a></span>
-                                    <span class="second">Reactjs, GoogleMap API</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://github.com/kdncode/react-airbnb" target="_blank" ><span>Code</span></a>
-                                        </div>
-                                    </div>
+									<span class="second">Reactjs, GoogleMap API</span>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://github.com/kdncode/react-airbnb", 
+											class="my_btn" target="_blank">Code <i class="fas fa-code"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
                         </li>
@@ -443,12 +446,13 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/5.jpg">E-Commerce Web for veterans | Grand Prize</a></span>
-                                    <span class="second">C#, ASP NET, GoogleMap API</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://github.com/kdncode/vets" target="_blank" ><span>Code</span></a>
-                                        </div>
-                                    </div>
+									<span class="second">C#, ASP NET, GoogleMap API</span>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://github.com/kdncode/vets", 
+											class="my_btn" target="_blank">Code <i class="fas fa-code"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
                         </li>
@@ -462,11 +466,12 @@
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/7.jpg">Weather Checker</a></span>
                                     <span class="second">NodeJs, Openweather API</span>
-                                    <div class="edina_tm_news_wrap">
-                                        <div class="read_more">
-                                            <a href="https://yourcityweather.herokuapp.com/" target="_blank" ><span>Demo</span></a>
-                                        </div>
-                                    </div>
+									<div class="edina_tm_work_together_wrap" style="margin-top: 10px">
+										<div class="invite">
+											<a href="https://yourcityweather.herokuapp.com/", 
+											class="my_btn" target="_blank">Demo <i class="fas fa-video"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
 						</li>
@@ -774,7 +779,8 @@
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s">
 							<textarea id="message" placeholder="Your Message" required></textarea>
 						</div> -->
-						<div class="edina_tm_button wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
+						<!-- <div class="edina_tm_button wow fadeIn"> -->
+						<div class="edina_tm_button">
 							<a id="send_message" href="mailto:kdncode@gmail.com?Subject=Job%20opportunities" target="_top">Send Message</a>
 						</div>
 					<!-- </form> -->
