--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
 				</ul>
 			</div>
 			<div class="edina_tm_navigation_wrap">
-					<div class="social_icons_wrap" style="left: 20px; top: 75%;">
-							<ul>
-								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
-								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
-								<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
-							</ul>
-						</div>
+				<div class="social_icons_wrap" style="left: 20px; top: 75%;">
+						<ul>
+							<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
+						</ul>
 					</div>
 				</div>
+			</div>
 		</div>
 
 
@@ -156,7 +156,10 @@
 						<div class="bg_wrap">
 							<div class="overlay_video"> 
 								<!-- https://www.youtube.com/watch?v=jnLSYfObARA -->
-								<a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=v5bmGaLELCA',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:2, opacity:1, quality:'default'}"></a>
+								<!-- <a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=v5bmGaLELCA',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:2, opacity:1, quality:'default'}"></a> -->
+								<video autoplay loop muted>
+									<source src="video/2.mp4" type="video/mp4">
+								</video>
 							</div>
 							<div class="overlay_color video">
 							</div>
