update resume link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="menu">
 							<ul class="anchor_nav">
 								<!-- <li><a href="#home">Home</a></li> -->
-								<!-- <li><a href="#about">About</a></li> -->
+								<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", target="_blank">Resume</a></li>
 								<li><a href="#services">Skills</a></li>
 								<li><a href="#portfolio">Projects</a></li>
 								<!-- <li><a href="#testimonials">Testimonials</a></li> -->
@@ -121,7 +121,7 @@
    			<div class="mob_menu">
 				<ul class="anchor_nav">
 					<!-- <li><a href="#home">Home</a></li> -->
-					<!-- <li><a href="#about">About</a></li> -->
+					<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", target="_blank">Resume</a></li>
 					<li><a href="#services">Skills</a></li>
 					<li><a href="#portfolio">Projects</a></li>
 					<!-- <li><a href="#testimonials">Testimonials</a></li> -->
@@ -130,7 +130,7 @@
 				</ul>
 			</div>
 			<div class="edina_tm_navigation_wrap">
-				<div class="social_icons_wrap" style="left: 20px; top: 75%;">
+				<div class="social_icons_wrap" style="left: 20px; top: 79%;">
 						<ul>
 							<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
