--- a/index.html
+++ b/index.html
@@ -704,17 +704,17 @@
                                 <h2 style="color: #fff">Where I have worked</h2><br><br>
 								<ul class="owl-carousel">
 									<li class="item">
-										<a href="https://amazon.com" class="my_btn" target="_blank">
-											<img src="img/partners/0.png" style="width: 200px; height: 100px;" alt="Amazon's logo" />
+										<a href="https://amazon.com" target="_blank">
+											<img src="img/partners/0.png" style="width: 400px; height: 100px;" alt="Amazon's logo" />
 										</a>
 									</li>
 									<li class="item">
-										<a href="https://tmobile.com" class="my_btn" target="_blank">
+										<a href="https://tmobile.com" target="_blank">
 											<img src="img/partners/1.png" style="width: 100px; height: 100px;" alt="T-Mobile's logo" />
 										</a>
 									</li>
 									<li class="item">
-										<a href=https://www.capgemini.com/" class="my_btn" target="_blank">
+										<a href=https://www.capgemini.com/" target="_blank">
 										<span style="font-size: 48px; width: 500px; height: 500px; color: rgb(235, 88, 34);" alt="LYONS's logo">
 											<i class="fab fa-wolf-pack-battalion"> LYONS</i>
 										<!-- <img src="img/partners/2.png" style="width: 120px; height: 120px;" alt="" /> -->
@@ -722,7 +722,7 @@
 										</a>
 									</li>
 									<li class="item">
-										<a href="https://untsystem.edu" class="my_btn" target="_blank">
+										<a href="https://untsystem.edu" target="_blank">
 										<img src="img/partners/3.png" style="width: 120px; height: 60px;" alt="UNT System's logo" />
 										</a>
 									</li>
