--- a/index.html
+++ b/index.html
@@ -704,13 +704,14 @@
                                 <h2 style="color: #fff">Where I have worked</h2><br><br>
 								<ul class="owl-carousel">
 									<li class="item">
-										<a href="https://amazon.com" target="_blank">
+										<a href="https://amzn.to/2OpTuBW" target="_blank">
 											<img src="img/partners/0.png" style="width: 400px; height: 100px;" alt="Amazon's logo" />
 										</a>
 									</li>
 									<li class="item">
 										<a href="https://tmobile.com" target="_blank">
-											<img src="img/partners/1.png" style="width: 100px; height: 100px;" alt="T-Mobile's logo" />
+											<img src="img/partners/
+												  " style="width: 250px; height: 110px;" alt="T-Mobile's logo" />
 										</a>
 									</li>
 									<li class="item">
