--- a/index.html
+++ b/index.html
@@ -710,8 +710,7 @@
 									</li>
 									<li class="item">
 										<a href="https://tmobile.com" target="_blank">
-											<img src="img/partners/
-												  " style="width: 250px; height: 110px;" alt="T-Mobile's logo" />
+											<img src="img/partners/1.png" style="width: 250px; height: 110px;" alt="T-Mobile's logo" />
 										</a>
 									</li>
 									<li class="item">
