--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="A software engineer/website developer">
+    <meta property="og:description" content="A software engineer">
     <meta property="og:url" content="/devices">
     <meta property="og:image" content="/img/portfolio/4.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="/devices">
     <meta name="twitter:title" content="Khoa Nguyen &mdash; Software engineer">
-    <meta name="twitter:description" content="A software engineer/website developer.">
+    <meta name="twitter:description" content="A software engineer">
     <meta name="twitter:image" content="/img/portfolio/4.jpg">
     <meta name="twitter:site" content="@kdncode">
     <link rel="icon" href="img/logo/imkhoa-favicon.png"> 
