add resume  text class

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="menu">
 							<ul class="anchor_nav">
 								<!-- <li><a href="#home">Home</a></li> -->
-								<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", target="_blank">Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", class="resume_txt" target="_blank">Resume</a></li>
 								<li><a href="#services">Skills</a></li>
 								<li><a href="#portfolio">Projects</a></li>
 								<!-- <li><a href="#testimonials">Testimonials</a></li> -->
@@ -134,7 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    			<div class="mob_menu">
 				<ul class="anchor_nav">
 					<!-- <li><a href="#home">Home</a></li> -->
-					<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", target="_blank">Resume</a></li>
+					<li><a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", class="resume_txt" target="_blank">Resume</a></li>
 					<li><a href="#services">Skills</a></li>
 					<li><a href="#portfolio">Projects</a></li>
 					<!-- <li><a href="#testimonials">Testimonials</a></li> -->
