add class to sns

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
 						<div class="social_icons_wrap">
 							<ul>
-								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github" id="github-web"></i></a></li>
-								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin" id="linkedin-web"></i></a></li>
+								<li><a href="https://github.com/kdncode" class="github_btn" target="_blank"><i class="fab fa-github" id="github-web"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/imkhoa/" class="linkedin_btn" target="_blank"><i class="xcon-linkedin" id="linkedin-web"></i></a></li>
+								<li><a href="https://twitter.com/kdncode" class="twitter_btn" target="_blank"><i class="xcon-twitter"></i></a></li>
 							</ul>
                         </div>
 					</div>
@@ -145,9 +146,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="edina_tm_navigation_wrap">
 				<div class="social_icons_wrap" style="left: 20px; top: 79%;">
 						<ul>
-							<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github" id="github-mobile"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin" id="linkedin-mobile"></i></a></li>
-							<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
+							<li><a href="https://github.com/kdncode" class="github_btn" target="_blank"><i class="fab fa-github" id="github-mobile"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/imkhoa/" class="linkedin_btn" target="_blank"><i class="xcon-linkedin" id="linkedin-mobile"></i></a></li>
+							<li><a href="https://twitter.com/kdncode" class="twitter_btn" target="_blank"><i class="xcon-twitter"></i></a></li>
 						</ul>
 					</div>
 				</div>
