Dynamic year on the all rights reserved footer

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- FOOTER -->
 		<div class="edina_tm_section">
 			<div class="edina_tm_footer_wrap">
-				<p class="wow fadeIn"  data-wow-duration="1.2s">&copy; Copyright 2020. <a href="https://imkhoa.com">Khoa Nguyen</a></p>
+				<p class="wow fadeIn"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://imkhoa.com">Khoa Nguyen</a></p>
 			</div>
 		</div>
 		<!-- /FOOTER -->
