added  Font color animation with Gradient

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="content hero">
 							<div class="container hero">
 								<div class="hero_title homepage_third">
-									<h3>Khoa Nguyen</h3>
-									<span>Software Engineer</span><br><br>
+									<h3 class="color_animation">Khoa Nguyen</h3><br>
+									<span class="color_animation_2">Software Engineer</span><br><br><br>
 									<div class="edina_tm_work_together_wrap">
 										<div class="invite">
 											<a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
