--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="A software engineer">
+    <meta property="og:description" content="I am a software engineer who has serious passion for building stuff and scaling things.">
     <meta property="og:url" content="/devices">
-    <meta property="og:image" content="/img/portfolio/4.jpg">
+    <meta property="og:image" content="/assets/images/slider/banner-01.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="/devices">
     <meta name="twitter:title" content="Khoa Nguyen's portfolio &mdash; Software engineer">
-    <meta name="twitter:description" content="I make and scale stuff">
-    <meta name="twitter:image" content="/img/portfolio/4.jpg">
+    <meta name="twitter:description" content="I am a software engineer who has serious passion for building stuff and scaling things.">
+    <meta name="twitter:image" content="/assets/images/slider/banner-01.png">
     <meta name="twitter:site" content="@kdncode">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script>
@@ -1095,7 +1095,7 @@
     <script src="assets/js/vendor/aos.js"></script>
     <script src="assets/js/vendor/particles.js"></script>
     <!-- main JS -->
-    <script src="assets/js/main.js?v=1"></script>
+    <script src="assets/js/main.js?v=1.0"></script>
 
 </body>
 
