Fix navbar and workplaces

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="I am a software engineer who has serious passion for building stuff and scaling things.">
     <meta property="og:url" content="/devices">
-    <meta property="og:image" content="/assets/images/slider/banner-01.png">
+    <meta property="og:image" content="/assets/images/portfolio/portfolio-05.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="/devices">
     <meta name="twitter:title" content="Khoa Nguyen's portfolio &mdash; Software engineer">
     <meta name="twitter:description" content="I am a software engineer who has serious passion for building stuff and scaling things.">
-    <meta name="twitter:image" content="/assets/images/slider/banner-01.png">
+    <meta name="twitter:image" content="/assets/images/portfolio/portfolio-05.jpg">
     <meta name="twitter:site" content="@kdncode">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script>
@@ -66,7 +66,7 @@
     <!-- End Google Tag Manager -->
 </head>
 
-<body class="template-color-1 spybody open dark-version" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
+<body class="template-color-1 spybody open white-version" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WN7MP8F"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -220,16 +220,15 @@
                                                 <span>a </span>
                                         <!-- ROTATING TEXT -->
                                         <span class="cd-words-wrapper">
-                                                    <b class="is-visible">Software Engineer.</b>
+                                                    <b class="is-visible">Software Engineer</b>
                                                 </span>
                                         </span>
                                         <!-- type headline end -->
                                         </span>
                                     </h1>
 
-                                    <p class="description">
-                                                           at Microsoft based in the U.S. I have serious 
-                                                           passion for building<br> stuff and scaling things. 
+                                    <p class="description">at Microsoft based in the U.S. I have serious 
+                                        passion for building stuff and scaling things. I also love solving algorithm challenges.
                                     </p>
                                     <!-- <div class="button-group text-center text-md-left pt--60 pt_md--40 pt_sm--40"> -->
                                     <div class="button-group text-center text-md-left pt_md--40 pt_sm--40">
@@ -299,7 +298,7 @@
                                         <a class="nav-link" id="v-pills-home-tab" data-toggle="tab" href="#v-pills-Javascript" role="tab" aria-selected="true"><img src="assets/images/logo/logo-microsoft.png" alt="Microsoft-logo"></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" id="v-pills-profile-tab" data-toggle="tab" href="#v-pills-Design" role="tab" aria-selected="true"><img src="assets/images/logo/logo-amazon-1.png" alt="Amazon-logo"></a>
+                                        <a class="nav-link active" id="v-pills-profile-tab" data-toggle="tab" href="#v-pills-Design" role="tab" aria-selected="true"><img src="assets/images/logo/logo-amazon.png" alt="Amazon-logo"></a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="v-pills-wordpress-tab" data-toggle="tab" href="#v-pills-Wordpress" role="tab" aria-selected="true"><img src="assets/images/logo/logo-tmobile.png" alt="Tmobile-logo"></a>
@@ -319,10 +318,10 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer at <span style="color: var(--color-primary)">Microsoft</span></h2>
-                                                        <a class="" target="_blank" href="https://www.microsoft.com">
-                                                            <span>X team - Sunnyvale, CA | Nov, 2021 - Present</span>
-                                                        </a>
+                                                        <h2 class="title">Software Development Engineer at
+                                                            <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
+                                                        </h2>
+                                                        <span>X team - Sunnyvale, CA | Nov, 2021 - Present</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
@@ -345,10 +344,10 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer at <span style="color: var(--color-primary)">Amazon</span></h2>
-                                                        <a class="" target="_blank" href="https://www.amazon.com/hz/contact-us/">
-                                                            <span>Message Us Chat team - Seattle, WA | Dec, 2019 - Nov, 2020</span>
-                                                        </a>
+                                                        <h2 class="title">Software Development Engineer at
+                                                            <a  href="https://www.amazon.com/hz/contact-us/" target="_blank">Amazon<i class="feather-arrow-up-right"></i></a>
+                                                        </h2>
+                                                        <span>Message Us Chat team - Seattle, WA | Dec, 2019 - Nov, 2020</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
@@ -375,10 +374,10 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Associate Software Development Engineer at <span style="color: var(--color-primary)">T-Mobile</span></h2>
-                                                        <a class="" target="_blank" href="https://www.tmobile.com">
-                                                            <span>Cloud team - Frisco, TX | Aug, 2018 - Nov, 2019</span>
-                                                        </a>
+                                                        <h2 class="title">Associate Software Development Engineer at 
+                                                            <a  href="https://www.tmobile.com" target="_blank">T-Mobile<i class="feather-arrow-up-right"></i></a>
+                                                        </h2>
+                                                        <span>Cloud team - Frisco, TX | Aug, 2018 - Nov, 2019</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
