change workplace city

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                                         <h2 class="title">Software Development Engineer at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>X team - Sunnyvale, CA | Nov, 2021 - Present</span>
+                                                        <span>X team - Mountain View, CA | Nov, 2021 - Present</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
